# ece4960_sp18

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Final/: CMakeLists.txt  Report.txt  common.h  final.cpp  test_common.cpp  test_ode.cpp
HackerPractices/: CMakeLists.txt  README.md
HackerPractices/Note02/: QuadraticEquation.cpp
HackerPractices/Note03/: CMakeLists.txt
HackerPractices/Note04/: CMakeLists.txt  output_test_conditioning.txt  output_test_jacobi.txt  output_test_lu.txt  output_test_matrix.txt  output_test_norm.txt  output_test_sor.txt  test_conditioning.cpp  test_jacobi.cpp  test_lu.cpp  test_matrix.cpp  test_norm.cpp  test_sor.cpp
HackerPractices/Note05/: CMakeLists.txt  output_bisection.txt  output_newton_raphson.txt  output_quasi_line_nonlinear.txt  output_quasi_newton.txt  test_bisection.cpp  test_newton_raphson.cpp  test_quasi_line_nonlinear.cpp  test_quasi_newton.cpp  test_quasi_steepest.cpp
HackerPractices/Note05_2/: CMakeLists.txt  monte_carlo_pi.cpp  power_law.cpp  random_distribution.cpp
HackerPractices/Note06/: euler.cpp  pg15.cpp  pg23.cpp  pg37.cpp  pg45.cpp  pg56.cpp
HackerPractices/Note07/: CMakeLists.txt  pg20.cpp  pg34.cpp  pg43.cpp  pg58.cpp
Hw/: CMakeLists.txt
Hw/Hw04/: CMakeLists.txt  PartI.cpp  PartII.cpp  out_partI.txt  out_partII.txt
Note02/: CMakeLists.txt  Denorm.cpp  Exception.cpp  Integer.cpp  Zero.cpp
Note03/: Note03_1.cpp
Playground/: CMakeLists.txt  test_find_min.cpp
Program01/: CMakeLists.txt  divided_by_zero.cpp  float_inf.cpp  float_nan.cpp  float_overflow.cpp  level1.txt  program01.h  signed_zero.cpp
ProgramAssignments/Program01/: CMakeLists.txt  calc_pi.cpp  gradual_underflow.cpp  level2.txt  overflow.cpp  program01.cpp
ProgramAssignments/Program02/: CMakeLists.txt  output_program02.txt  output_program02_matrix_test.txt  program02.cpp  program02_matrix_test.cpp  report.md
ProgramAssignments/Program03/: CMakeLists.txt  compare_dlib.cpp  program03.h  report.md  task02.cpp  task04.cpp  task04_dlib.cpp  test_der.cpp
ProgramAssignments/Program04/: CMakeLists.txt  report.ipynb  task01.cpp  task03.cpp  task04.cpp  task05.cpp  test.cpp  utils.h
ProgramAssignments/Program04/.ipynb_checkpoints/: report-checkpoint.ipynb
ProgramAssignments/Program05/: CMakeLists.txt  Proposal.md  Report.md  Test Results - Sparse.html  demo_solvepnp.cpp
general/: functor.cpp  functor.h
lsq/: functor.cpp  functor.h  lsq.cpp  lsq.h
matrix/: CMakeLists.txt  dense_matrix.cpp  dense_matrix.h  sparse_matrix.cpp  sparse_matrix.h  test_matrix.cpp  test_matrix.h
nonlinear/: bisection.cpp  bisection.h  find_min.cpp  find_min.h  func.cpp  func.h  newton.cpp  newton.h
numeric/: doubles.h  floats.cpp  floats.h  int.h
ode/: functor.cpp  functor.h  ode.cpp  ode.h
py/: 1.py  ode_test.py
sparse/: CMakeLists.txt
sparse/lu/: sparse_lu.h
sparse/matrix/: sparse_matrix.cpp  sparse_matrix.h  vector_util.h
sparse/qr/: sparse_qr.h
sparse/svd/: sparse_svd.h
sparse/test/: sparse_test_main.cpp  sparse_test_matrix.cpp  sparse_test_qr.cpp  sparse_test_svd.cpp
utils/: mem_usage.cpp  mem_usage.h  output.cpp  output.h  timer_util.cpp  timer_util.h
