add_executable(HP_Note05_bisection test_bisection.cpp ../../nonlinear/bisection.cpp)
add_executable(HP_Note05_newton_raphson test_newton_raphson.cpp ../../nonlinear/bisection.cpp ../../nonlinear/newton.cpp)
add_executable(HP_Note05_quasi_newton test_quasi_newton.cpp ../../nonlinear/bisection.cpp ../../nonlinear/newton.cpp)
add_executable(HP_Note05_quasi_newton_nonlinear test_quasi_line_nonlinear.cpp ../../nonlinear/bisection.cpp ../../nonlinear/newton.cpp)
add_executable(HP_Note05_quasi_steepest test_quasi_steepest.cpp ../../nonlinear/bisection.cpp ../../nonlinear/newton.cpp)
