file(GLOB fs "*.cpp")
find_package(OpenCV REQUIRED)
get_filename_component(hp_name ${CMAKE_CURRENT_SOURCE_DIR} NAME_WE)
include_directories(${OpenCV_INCLUDE_DIRS})
foreach(f ${fs})
    get_filename_component(fn ${f} NAME_WE)
    add_executable(HP_${hp_name}_${fn} ${fn})
    target_link_libraries(HP_${hp_name}_${fn} ${OpenCV_LIBS})
endforeach()
